--- a/_includes/guide-aesthic.html
+++ b/_includes/guide-aesthic.html
@@ -132,6 +132,9 @@
                 <li class="list-group-item">
                     {{ site.data.strings.guide.water.drain }}
                 </li>
+                <li class="list-group-item">
+                    {{ site.data.strings.guide.ripen.weather.pray_for_coolness }}
+                </li>
             </ul>
         </div>
     </div>
