--- a/_includes/guide-tips.html
+++ b/_includes/guide-tips.html
@@ -13,55 +13,62 @@
             <ul class="list-group">
                 <li class="list-group-item">
                     <i class="fas fa-check"></i>
-                    Always check your Rice Status and talk to Tauemon.
+                    Always check your Rice Status and talk to Tauemon for tips.
                 </li>
                 <li class="list-group-item">
                     <i class="fas fa-poop"></i>
-                    Use <strong>Anti-Toxicity (Spring/Renowed Water, Aqueous Droplet)</strong> Fertilizer to counter
-                    Salt Damage.
+                    Use less <strong class="text-danger">Salt</strong> in your Fertilizer 
+                    to avoid <span class="text-danger">Salt damage</span> or skip using Fertilizer for this day.<br />
+                    While Salty Food gives you better boost, its saline can make the poop/base-fertilizer salty :)
                 </li>
                 <li class="list-group-item">
                     <i class="fas fa-poop"></i>
-                    Use <strong>Presicide (Eradicating Remedy, Salt + Water, Fish Mint)</strong> Fertilizer to counter
-                    some Disease (Rice blight, Rice stripe virus).
+                    Use <strong class="text-success">Eradicating Remedy</strong> 
+                    to cure <span class="text-danger">Rice blight and Rice stripe virus</span>.
                 </li>
                 <li class="list-group-item">
                     <i class="fas fa-poop"></i>
-                    Use <strong>Immunity (Revitalizing Remedy, Salt + Water, Aqueous Droplet)</strong> Fertilizer to
-                    counter some Disease (Rice Ragged Stunt Virus, Pecky Rice Disease).
+                    Use <strong class="text-success">Revitalizing Remedy</strong> 
+                    to cure <span class="text-danger">Rice Ragged Stunt Virus, Pecky Rice Disease and Spindly</span>.
                 </li>
                 <li class="list-group-item">
                     <i class="fas fa-poop"></i>
-                    Use <strong>Herbicide (Reducing Remedy, Aqueous Droplet, Rice Bran + Fish Mint)</strong> Fertilizer
-                    to counter Weeds and Herbs.
+                    Use <strong class="text-success">Reducing Remedy</strong> 
+                    to cure <span class="text-danger">Overgrown and Spindly</span> 
+                    or avoid having too much soil nutrients (full triangle).
                 </li>
                 <li class="list-group-item">
-                    <i class="fas fa-cloud-sun"></i>
-                    Weather: <strong>Pray for sunny weather</strong> to counter Spindly.
+                    <i class="fas fa-cloud-sun"></i> Weather: 
+                    <strong class="text-info">Pray for sunny weather</strong> to counter <span class="text-danger">Spindly</span>.
                 </li>
                 <li class="list-group-item">
-                    <i class="fas fa-cloud-sun"></i>
-                    Weather: <strong>Pray for cool weather</strong> to counter Heat damage or open both gates.
-                </li>
-                <li class="list-group-item">
-                    <i class="fas fa-poop"></i>
-                    Use <strong>Fertilizer</strong> with Rotten Food to boost Stats, Salt (to balanced out Presicide)
-                    and Spring/Renowed Water (to balanced out Toxicity) (beware of Salt damage).
+                    <i class="fas fa-cloud-sun"></i> Weather: 
+                    <strong class="text-info">Pray for cool weather</strong> to counter <span class="text-danger">Heat damage</span> or open both gates.
                 </li>
                 <li class="list-group-item">
                     <i class="fas fa-poop"></i>
-                    Use <strong>Ingredients</strong> in your Fertilizer that expires and don't give negative effect like
-                    <strong>Acorns, Grasshopper or Bee Larva</strong>.
+                    Use <strong>Fertilizer</strong> with A LOT Rotten Food to boost Stats, 
+                    Salt and Spring/Renowed Water. (beware of <span class="text-danger">Salt damage</span>). <br />
+                    (Try to use <strong class="text-success">Aqueous Droplet</strong> instead of Salt and Spring/Renowed Water)
                 </li>
                 <li class="list-group-item">
                     <i class="fas fa-leaf"></i>
-                    Try to use more <strong>Natural Presicides</strong> like <strong>Fish Mint, Aqueous Droplet or
-                        Garlic</strong> to avoid Salt damage.
+                    Try to use more <strong class="text-success">Natural Pesticides</strong> like 
+                    <strong class="text-success">Fish Mint, Garlic ot Ginger</strong>.
+                </li>
+                <li class="list-group-item">
+                    <i class="fas fa-poop"></i>
+                    You can put <strong>Ingredients</strong> into your Fertilizer that expires and don't give negative effect like
+                    <strong class="text-success">Acorns, Grasshopper or Bee Larva</strong>.
                 </li>
                 <li class="list-group-item">
                     <i class="fas fa-moon"></i>
-                    Use can farm <strong>Moonlit Stone</strong> at night early in the game, dropped by rabbit deamons and
-                    <stronge>Aqueous Droplet</stronge> later in the game, dropped by water enemys.
+                    Use can farm <strong class="text-success">Moonlit Stone</strong> at night early in the game, dropped by demons rabbits 
+                    and <strong class="text-success">Aqueous Droplet</strong> later in the game, dropped by water enemies.
+                </li>
+                <li class="list-group-item">
+                    <i class="fas fa-check-square"></i>
+                    When checking Ride Status, <strong class="text-success">Dehydration</strong> is a <strong class="text-success">GOOD</strong> thing, see Farming Guide for more details.
                 </li>
             </ul>
         </div>
