--- a/_includes/fertilizer_helper.html
+++ b/_includes/fertilizer_helper.html
@@ -5,7 +5,7 @@
                 {{ site.data.strings.fertilizer_helper.fertilizer.title }}
             </div>
             <div class="card-body p-0 p-lg-3">
-                <div class="row mt-1">
+                <div class="row">
                     <div class="col">
                         <div class="form-group form-check">
                             <input type="checkbox" class="form-check-input" id="chbSettingsNoInventoryRestriction">
@@ -13,7 +13,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-1">
+                <div class="row">
                     <div class="col-lg-7 pr-lg-2">
                         <div class="card">
                             <div class="card-header text-center">
