--- a/_includes/fertilizer_helper.html
+++ b/_includes/fertilizer_helper.html
@@ -61,7 +61,7 @@
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.immunity_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.immunity }}</span>
                             </div>
-                            <div class="col-2 immunuity text-left pr-0" id="fertilizerImmunuity">0</div>
+                            <div class="col-2 immunuity text-left pr-0" id="fertilizerImmunity">0</div>
                         </div>
                         <div class="row">
                             <div class="col-5 pr-0 taste-strength-label text-right">
