--- a/assets/css/main-dark.scss
+++ b/assets/css/main-dark.scss
@@ -2,9 +2,10 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "variables";
+@import "variables_dark";
 @import "bootstrap/bootstrap";
 @import "syntax-highlighting";
 @import "bootstrap-4-jekyll/bootstrap-4-jekyll";
-@import "custom_variables";
+@import "bootswatch_dark";
+@import "custom_variables_dark";
 @import "custom";
