--- a/_includes/guide-space.html
+++ b/_includes/guide-space.html
@@ -16,7 +16,7 @@
     <div class="col-12 tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active" id="nav-spacing-a-little-apart" role="tabpanel"
             aria-labelledby="nav-spacing-a-little-apart-tab">
-            <div class="card card-dark">
+            <div class="card">
                 <img class="img-fluid card-img-top px-4"
                     src="{{ '/assets/img/1x2_4x4_little_far_apart.svg' | relative_url }}"
                     alt="space-a-little-far-apart">
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="tab-pane fade" id="nav-spacing-balanced" role="tabpanel" aria-labelledby="nav-spacing-balanced-tab">
-            <div class="card card-dark">
+            <div class="card">
                 <img class="img-fluid card-img-top px-4" src="{{ '/assets/img/balanced.svg' | relative_url }}"
                     alt="space-balanced">
                 <div class="card-body">
@@ -53,7 +53,7 @@
         </div>
         <div class="tab-pane fade" id="nav-spacing-circle-balanced" role="tabpanel"
             aria-labelledby="nav-spacing-circle-balanced-tab">
-            <div class="card card-dark">
+            <div class="card">
                 <img class="img-fluid card-img-top px-4" src="{{ '/assets/img/circle_balanced.svg' | relative_url }}"
                     alt="space-circle_balanced">
                 <div class="card-body">
