--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/datatables.net-bs4/dataTables.bootstrap4.min.css' | relative_url }}">
 
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/main.css' | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/main-light.css' | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/main-dark.css' | relative_url }}">
 
   {%- feed_meta -%}
   <script src="{{ '/assets/js/jquery.min.js' | relative_url }}"></script>
