--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,25 +20,25 @@ $yellow: #F39C12;
 $green: #00bc8c;
 $teal: #20c997;
 $cyan: #3498DB;
-$primary: #8C1F22;
+$primary: #912a25;
 $secondary: #D1765E;
 $success: rgb(23, 182, 46);
 $info: rgb(23, 176, 182);
-$warning: rgb(175, 182, 23);
+$warning: rgb(204, 212, 28);
 $danger: #ef0100;
 $light: $gray-500;
 $dark: $gray-900;
 $yiq-contrasted-threshold: 175;
 $link-color: rgb(162, 48, 44);
-$font-family-sans-serif: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$font-size-base: 0.9375rem;
-$h1-font-size: 1.4rem;
-$h2-font-size: 1.3rem;
-$h3-font-size: 1.3rem;
+$font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-size-base: .9375rem;
+$h1-font-size: 3rem;
+$h2-font-size: 2.5rem;
+$h3-font-size: 2rem;
 $text-muted: $gray-600;
 $table-accent-bg: $gray-800;
-$input-group-addon-color: $gray-500;
-$input-group-addon-bg: $gray-700;
+$input-group-addon-color: $black;
+$input-group-addon-bg: #C8CDC9;
 $custom-file-color: $gray-500;
 $dropdown-bg: #ded4c1;
 $component-active-bg: rgb(29, 100, 69);
@@ -61,7 +61,7 @@ $navbar-light-toggler-border-color: rgba($gray-900, .1);
 $pagination-border-width: 0;
 $pagination-hover-border-color: $black;
 $pagination-active-border-color: transparent;
-$pagination-bg: rgb(37, 129, 88);
+$pagination-bg: #BF985F;
 $pagination-disabled-bg: darken($pagination-bg, 10%);
 $pagination-disabled-border-color: transparent;
 $jumbotron-bg: $gray-800;
@@ -83,21 +83,23 @@ $card-cap-color: $black;
 $card-color: $black;
 $component-active-color: $black;
 $nav-tabs-link-active-bg: darken(rgb(163, 147, 138),10%);
-$nav-pills-link-active-bg: #BF985F;
+$nav-pills-link-active-bg: darken(rgb(163, 147, 138),10%);
 $modal-content-color: $black;
 $link-hover-color: $black;
 $dropdown-color: $black;
 $dropdown-link-hover-bg: #418467;
-$list-group-color: $white;
-$list-group-bg: $gray-800;
+$list-group-color: $black;
+$list-group-bg: #d1d1cd;
 $list-group-active-bg: #418467;
 $pagination-border-color: $black;
-$pagination-hover-color: $black;
-$pagination-color: $white;
+$pagination-hover-color: $white;
+$pagination-color: $black;
 $nav-link-disabled-color: $gray-500;
 $card-border-color: $black;
 $card-border-width: 2px;
-$pagination-hover-bg: #BF985F;
+$pagination-hover-bg: darken(rgb(163, 147, 138),10%);
 $pagination-active-bg: #ded4c1;
 $pagination-active-color: $black;
 $body-bg: rgb(238, 237, 231);
+$table-bg-level: -5;
+$pagination-disabled-color: $gray-700;
