--- a/_includes/fertilizer_helper.html
+++ b/_includes/fertilizer_helper.html
@@ -1,10 +1,10 @@
 <div class="row mt-2">
     <div class="col-lg-6 pr-lg-2">
-        <div class="card">
-            <div class="card-header text-center">
+        <div class="card card-fertilizer">
+            <div class="card-header card-header-fertilizer text-center">
                 {{ site.data.strings.fertilizer_helper.fertilizer.title }}
             </div>
-            <div class="card-body p-0 p-lg-3">
+            <div class="card-body card-body-fertilizer p-0 p-lg-3 my-2">
                 <div class="row">
                     <div class="col">
                         <div class="form-group form-check">
@@ -15,11 +15,11 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-7 pr-lg-2">
-                        <div class="card">
-                            <div class="card-header text-center">
+                        <div class="card card-soil-nutrients">
+                            <div class="card-header card-header-soil-nutrients text-center">
                                 {{ site.data.strings.fertilizer_helper.fertilizer.soil_nutrients.title }}
                             </div>
-                            <div class="card-body">
+                            <div class="card-body card-body-soil-nutrients">
                                 <div class="input-group">
                                     <div class="input-group-prepend d-none d-sm-inline">
                                         <span class="input-group-text d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.soil_nutrients.current_fertilizer_short }}</span>
@@ -116,31 +116,32 @@
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.armor_magic }}</span>
                             </div>
                             <div class="col-2 armor-magic text-left pr-0" id="fertilizerArmorMagic">0</div>
-
-                        </div>
-                        <div class="row mt-2">
-                            <ul class="list-group" id="lstFertilizerHints"></ul>
                         </div>
                     </div>
                     <div class="col-lg-5 pl-lg-2">
-                        <div class="card">
-                            <div class="card-header text-center">
+                        <div class="card card-components">
+                            <div class="card-header card-header-components text-center">
                                 {{ site.data.strings.fertilizer_helper.fertilizer.components.title }}
                             </div>
-                            <div class="card-body p-0">
+                            <div class="card-body card-body-components p-0">
                                 <ul class="list-group list-group-flush" id="lstFertilizeComponents">
-                                    <li class="list-group-item list-group-item-light">-</li>
-                                    <li class="list-group-item list-group-item-light">-</li>
-                                    <li class="list-group-item list-group-item-light">-</li>
-                                    <li class="list-group-item list-group-item-light">-</li>
-                                    <li class="list-group-item list-group-item-light">-</li>
-                                    <li class="list-group-item list-group-item-light">-</li>
-                                    <li class="list-group-item list-group-item-light">-</li>
-                                    <li class="list-group-item list-group-item-light">-</li>
-                                    <li class="list-group-item list-group-item-light">-</li>
+                                    <li class="list-group-item">-</li>
+                                    <li class="list-group-item">-</li>
+                                    <li class="list-group-item">-</li>
+                                    <li class="list-group-item">-</li>
+                                    <li class="list-group-item">-</li>
+                                    <li class="list-group-item">-</li>
+                                    <li class="list-group-item">-</li>
+                                    <li class="list-group-item">-</li>
+                                    <li class="list-group-item">-</li>
                                 </ul>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="row mt-2">
+                    <div class="col-lg-12">
+                        <ul class="list-group fertilizer-hints" id='lstFertilizerHints'></ul>
                     </div>
                 </div>
             </div>
@@ -148,8 +149,8 @@
     </div>
 
     <div class="col-lg-6 pl-lg-2">
-        <div class="card">
-            <div class="card-header card-header-nav-tabs text-center">
+        <div class="card card-fertilizer-inventory">
+            <div class="card-header card-header-fertilizer-inventory card-header-nav-tabs text-center">
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
                         <a class="nav-link active" id="nav-inventory-tab" data-toggle="tab" href="#nav-inventory" role="tab" aria-controls="nav-inventory" aria-selected="true">{{ site.data.strings.fertilizer_helper.inventory.additional_components.title }}</a>
@@ -158,7 +159,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="card-body p-0 my-2">
+            <div class="card-body card-body-fertilizer-inventory p-0 my-2">
                 <div class="tab-content" id="nav-inventory-tabContent">
                     <div class="tab-pane fade show active" id="nav-inventory" role="tabpanel" aria-labelledby="nav-inventory-tab">
                         <div class="row no-gutters">
