--- a/_sass/_bootswatch_dark.scss
+++ b/_sass/_bootswatch_dark.scss
@@ -1,11 +1,10 @@
 // Darkly 4.5.3
 // Bootswatch
 
-
 // Variables ===================================================================
 
-$web-font-path: "https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" !default;
-@import url($web-font-path);
+//$web-font-path: "https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" !default;
+//@import url($web-font-path);
 
 // Typography ==================================================================
 
