--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,4 +1,3 @@
-$nav-tabs-bg-color: #C8CDC9;
 
 ul.pagination {
     a.page {
@@ -60,41 +59,42 @@ ul.pagination {
 }
 
 .nav-tabs {
-    background-color: $nav-tabs-bg-color;
-    border: $border-width solid $black;
-    border-radius: $border-radius;
+    background-color: $card-cap-bg;
+}
 
-    .nav-link,
-    .nav-link.active {
-        color: $black;
-        //text-shadow: -1px 0 $white, 0 1px $white, 1px 0 $white, 0 -1px $white;
-    }
+.card-header {
+    .nav-tabs {
+        background-color: $nav-tabs-bg-color;
+        border: $border-width solid $white;
+        border-radius: $border-radius;
 
-    .nav-link,
-    .nav-link.active,
-    .nav-link.active:focus,
-    .nav-link.active:hover,
-    .nav-item.open .nav-link,
-    .nav-item.open .nav-link:focus,
-    .nav-item.open .nav-link:hover,
-    .nav-pills .nav-link,
-    .nav-pills .nav-link.active,
-    .nav-pills .nav-link.active:focus,
-    .nav-pills .nav-link.active:hover,
-    .nav-pills .nav-item.open .nav-link,
-    .nav-pills .nav-item.open .nav-link:focus,
-    .nav-pills .nav-item.open .nav-link:hover {
-        color: $black !important;
-        //text-shadow: -1px 0 $white, 0 1px $white, 1px 0 $white, 0 -1px $white;
+        .nav-link,
+        .nav-link.active {
+            color: $body-color;
+            //text-shadow: -1px 0 $white, 0 1px $white, 1px 0 $white, 0 -1px $white;
+        }
+
+        .nav-link,
+        .nav-link.active,
+        .nav-link.active:focus,
+        .nav-link.active:hover,
+        .nav-item.open .nav-link,
+        .nav-item.open .nav-link:focus,
+        .nav-item.open .nav-link:hover,
+        .nav-pills .nav-link,
+        .nav-pills .nav-link.active,
+        .nav-pills .nav-link.active:focus,
+        .nav-pills .nav-link.active:hover,
+        .nav-pills .nav-item.open .nav-link,
+        .nav-pills .nav-item.open .nav-link:focus,
+        .nav-pills .nav-item.open .nav-link:hover {
+            color: $body-color !important;
+            //text-shadow: -1px 0 $white, 0 1px $white, 1px 0 $white, 0 -1px $white;
+        }
     }
 }
 
 .card {
-    .list-group-item-light {
-        color: $card-color;
-        background-color: $card-bg;
-    }
-
     .card-header-nav-tabs {
         padding: 7px 0 0 0;
 
@@ -104,16 +104,6 @@ ul.pagination {
         }
     }
 }
-
-.card-dark { 
-    color: $white;
-    background-color: $gray-800;
-    
-    .card-body {
-        color: $white;
-    }
-}
-
 
 .rounded-circle {
     border-radius: 50%;
@@ -134,103 +124,124 @@ ul.pagination {
 }
 
 .farming-guide-winter { 
-    background-color: skyblue;
+    background-color: $winter-color;
     .card-header {
-        color: black;
-        background-color: skyblue;
+        color: $black;
+        background-color: $winter-color;
     }
 }
 .farming-guide-spring { 
-    background-color: greenyellow;
+    background-color: $spring-color;
     .card-header {
-        color: black;
-        background-color: greenyellow;
+        color: $black;
+        background-color: $spring-color;
     }
 }
 .farming-guide-summer { 
-    background-color: lightyellow;
+    background-color: $summer-color;
     .card-header {
-        color: black;
-        background-color: lightyellow;
+        color: $black;
+        background-color: $summer-color;
     }
 }
 .farming-guide-autumn { 
-    background-color: lightsalmon;
+    background-color: $autumn-color;
     .card-header {
-        color: black;
-        background-color: lightsalmon;
+        color: $black;
+        background-color: $autumn-color;
     }
 }
 
 .farming-guild-pills-balanced-nav-link {
-    border: 1px solid #543cdb !important;
+    border: 1px solid $balanced-color !important;
     &.active {
-        color: black !important;
-        background-color: lighten(#543cdb, 10) !important;
+        color: $black !important;
+        background-color: lighten($balanced-color, 10) !important;
     }
 }
-.balanced-text {
-    color: #543cdb !important;
+.text-balanced {
+    color: $balanced-color !important;
 }
 
 .farming-guild-pills-yield-nav-link {
-    border: 1px solid #3cdb57 !important;
+    border: 1px solid $yield-color !important;
     &.active {
-        color: black !important;
-        background-color: lighten(#3cdb57, 10%) !important;
+        color: $black !important;
+        background-color: lighten($yield-color, 10%) !important;
     }
 }
-.yield-text {
-    color: #3cdb57 !important;
+.text-yield {
+    color: $yield-color !important;
+}
+.yield-hp-label {
+    color: $yield-color;
 }
 
 .farming-guild-pills-heartiness-nav-link {
-    border: 1px solid #db963c !important;
+    border: 1px solid $heartiness-color !important;
     &.active {
-        color: black !important;
-        background-color: lighten(#db963c, 10%) !important;
+        color: $black !important;
+        background-color: lighten($heartiness-color, 10%) !important;
     }
 }
-.heartiness-text {
-    color: #db963c !important;
+.text-heartiness {
+    color: $heartiness-color !important;
+}
+.taste-strength-label,
+.hardness-vitality-label,
+.stickiness-gusto-label {
+    color: $heartiness-color;
 }
 
-.farming-guild-pills-aesthic-nav-link {
-    border: 1px solid #db3c3c !important;
+.farming-guild-pills-aesthetic-nav-link {
+    border: 1px solid $aesthetic-color !important;
     &.active {
-        color: black !important;
-        background-color: lighten(#db3c3c, 10%) !important;
+        color: $black !important;
+        background-color: lighten($aesthetic-color, 10%) !important;
     }
 }
-.aesthic-text {
-    color: #db3c3c !important;
+.text-aesthetic {
+    color: $aesthetic-color !important;
+}
+.aesthetic-luck-label {
+    color: $aesthetic-color;
 }
 
 .farming-guild-pills-aroma-nav-link {
-    border: 1px solid #9b3cdb !important;
+    border: 1px solid $aroma-color !important;
     &.active {
-        color: black !important;
-        background-color: lighten(#9b3cdb, 10%) !important;
+        color: $black !important;
+        background-color: lighten($aroma-color, 10%) !important;
     }
 }
-.aroma-text {
-    color: #9b3cdb !important;
+.text-aroma {
+    color: $aroma-color !important;
+}
+.armor-magic-label {
+    color: $aroma-color;
 }
 
-.text-red-line {
-    color: red;
+.text-neutral {
+    color: $body-color;
 }
-.text-orange-line {
-    color: orange;
+
+.text-placements-1-1-color {
+    color: $placements-1-1-color;
 }
-.text-turquoise-line {
-    color: turquoise;
+.text-placements-2-1-color {
+    color: $placements-2-1-color;
 }
-.text-springgreen-line {
-    color: springgreen;
+.text-placements-4-4-color {
+    color: $placements-4-4-color;
 }
-.text-violet-line {
-    color: violet;
+.text-placements-1-3-color {
+    color: $placements-1-3-color;
+}
+.text-placements-2-2-color {
+    color: $placements-2-2-color;
+}
+.text-placements-circle-color {
+    color: $placements-circle-color;
 }
 
 .farming-guild-content {
@@ -264,4 +275,24 @@ ul.pagination {
 .soil-nutrients-chart-container {
     background-color: lighten($card-cap-bg, 10%);
     border: $border-width solid $card-cap-bg;
+}
+
+.table-danger { 
+    background-color: lighten($danger, 10%);
+}
+
+.card-header {
+    font-weight: bold;
+}
+
+.card-body-fertilizer,
+.card-body-fertilizer-inventory {
+    min-height: 560px;
+}
+
+.card-body-components {
+    .list-group-item {
+        color: $card-color;
+        background-color: $card-bg;
+    }
 }
