--- a/_sass/_variables_dark.scss
+++ b/_sass/_variables_dark.scss
@@ -1,164 +1,96 @@
-// Darkly 4.5.3
-// Bootswatch
 
-//
-// Color system
-//
-
-$white:    #fff !default;
-$gray-100: #f8f9fa !default;
-$gray-200: #ebebeb !default;
-$gray-300: #dee2e6 !default;
-$gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #888 !default;
-$gray-700: #444 !default;
-$gray-800: #303030 !default;
-$gray-900: #222 !default;
-$black:    #000 !default;
-
-$blue:    #375a7f !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #e74c3c !default;
-$orange:  #fd7e14 !default;
-$yellow:  #f39c12 !default;
-$green:   #00bc8c !default;
-$teal:    #20c997 !default;
-$cyan:    #3498db !default;
-
-$primary:       $blue !default;
-$secondary:     $gray-700 !default;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         $gray-500 !default;
-$dark:          $gray-800 !default;
-
-$yiq-contrasted-threshold:  175 !default;
-
-// Body
-
-$body-bg:                   $gray-900 !default;
-$body-color:                $white !default;
-
-// Links
-
-$link-color:                $success !default;
-
-// Fonts
-
-// stylelint-disable-next-line value-keyword-case
-$font-family-sans-serif:      Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$font-size-base:              .9375rem !default;
-$font-size-sm:                $font-size-base * .88 !default;
-$h1-font-size:                3rem !default;
-$h2-font-size:                2.5rem !default;
-$h3-font-size:                2rem !default;
-$text-muted:                  $gray-600 !default;
-
-// Tables
-
-$table-accent-bg:             $gray-800 !default;
-$table-border-color:          $gray-700 !default;
-
-// Forms
-
-$input-border-color:                $body-bg !default;
-$input-group-addon-color:           $gray-500 !default;
-$input-group-addon-bg:              $gray-700 !default;
-$custom-file-color:                 $gray-500 !default;
-$custom-file-border-color:          $body-bg !default;
-
-// Dropdowns
-
-$dropdown-bg:                       $gray-900 !default;
-$dropdown-border-color:             $gray-700 !default;
-$dropdown-divider-bg:               $gray-700 !default;
-$dropdown-link-color:               $white !default;
-$dropdown-link-hover-color:         $white !default;
-$dropdown-link-hover-bg:            $primary !default;
-
-// Navs
-
-$nav-link-padding-x:                2rem !default;
-$nav-link-disabled-color:           $gray-500 !default;
-$nav-tabs-border-color:             $gray-700 !default;
-$nav-tabs-link-hover-border-color:  $nav-tabs-border-color $nav-tabs-border-color transparent !default;
-$nav-tabs-link-active-color:        $white !default;
-$nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent !default;
-
-// Navbar
-
-$navbar-padding-y:                  1rem !default;
-$navbar-dark-color:                rgba($white, .6) !default;
-$navbar-dark-hover-color:          $white !default;
-$navbar-light-color:                rgba($gray-900, .7) !default;
-$navbar-light-hover-color:          $gray-900 !default;
-$navbar-light-active-color:         $gray-900 !default;
-$navbar-light-toggler-border-color: rgba($gray-900, .1) !default;
-
-// Pagination
-
-$pagination-color:                  $white !default;
-$pagination-bg:                     $success !default;
-$pagination-border-width:           0 !default;
-$pagination-border-color:           transparent !default;
-$pagination-hover-color:            $white !default;
-$pagination-hover-bg:               lighten($success, 10%) !default;
-$pagination-hover-border-color:     transparent !default;
-$pagination-active-bg:              $pagination-hover-bg !default;
-$pagination-active-border-color:    transparent !default;
-$pagination-disabled-color:         $white !default;
-$pagination-disabled-bg:            darken($success, 15%) !default;
-$pagination-disabled-border-color:  transparent !default;
-
-// Jumbotron
-
-$jumbotron-bg:                      $gray-800 !default;
-
-// Cards
-
-$card-cap-bg:                       $gray-700 !default;
-$card-bg:                           $gray-800 !default;
-
-// Popovers
-
-$popover-bg:                        $gray-800 !default;
-$popover-header-bg:                 $gray-700 !default;
-
-// Toasts
-
-$toast-background-color:            $gray-700 !default;
-$toast-header-background-color:     $gray-800 !default;
-
-// Modals
-
-$modal-content-bg:                  $gray-800 !default;
-$modal-content-border-color:        $gray-700 !default;
-$modal-header-border-color:         $gray-700 !default;
-
-// Progress bars
-
-$progress-bg:                       $gray-700 !default;
-
-// List group
-
-$list-group-bg:                     $gray-800 !default;
-$list-group-border-color:           $gray-700 !default;
-$list-group-hover-bg:               $gray-700 !default;
-
-// Breadcrumbs
-
-$breadcrumb-bg:                     $gray-700 !default;
-
-// Close
-
-$close-color:                       $white !default;
-$close-text-shadow:                 none !default;
-
-// Code
-
-$pre-color:                         inherit !default;
+$white: #F7F5EC;
+$gray-100: #f8f9fa;
+$gray-200: #ebebeb;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #888;
+$gray-700: #444;
+$gray-800: #303030;
+$gray-900: #222;
+$black: #09080A;
+$blue: #375a7f;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #e83e8c;
+$red: #ef0100;
+$orange: #fd7e14;
+$yellow: #f39c12;
+$green: rgb(23, 182, 46);
+$teal: #20c997;
+$cyan: #3498db;
+$primary: #912a25;
+$secondary: #D1765E;
+$success: $green;
+$info: rgb(23, 176, 182);
+$warning: rgb(204, 212, 28);
+$danger: $red;
+$light: $gray-500;
+$dark: $gray-800;
+$yiq-contrasted-threshold: 175;
+$body-bg: $gray-900;
+$body-color: $white;
+$link-color: rgb(162, 48, 44);
+$font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-size-base: .9375rem;
+$font-size-sm: $font-size-base * .88;
+$h1-font-size: 3rem;
+$h2-font-size: 2.5rem;
+$h3-font-size: 2rem;
+$text-muted: $gray-600;
+$table-accent-bg: $gray-800;
+$table-border-color: $gray-700;
+$input-border-color: $body-bg;
+$input-group-addon-color: $gray-500;
+$input-group-addon-bg: $gray-700;
+$custom-file-color: $gray-500;
+$custom-file-border-color: $body-bg;
+$dropdown-bg: $gray-900;
+$dropdown-border-color: $gray-700;
+$dropdown-divider-bg: $gray-700;
+$dropdown-link-color: $white;
+$dropdown-link-hover-color: $white;
+$dropdown-link-hover-bg: $primary;
+$nav-link-padding-x: 2rem;
+$nav-link-disabled-color: $gray-500;
+$nav-tabs-border-color: $gray-700;
+$nav-tabs-link-hover-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent;
+$nav-tabs-link-active-color: $white;
+$nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent;
+$navbar-padding-y: 1rem;
+$navbar-dark-color: rgba($white, .6);
+$navbar-dark-hover-color: $white;
+$navbar-light-color: rgba($gray-900, .7);
+$navbar-light-hover-color: $gray-900;
+$navbar-light-active-color: $gray-900;
+$navbar-light-toggler-border-color: rgba($gray-900, .1);
+$pagination-border-width: 0;
+$jumbotron-bg: $gray-800;
+$card-cap-bg: $gray-700;
+$popover-bg: $gray-800;
+$popover-header-bg: $gray-700;
+$toast-background-color: $gray-700;
+$toast-header-background-color: $gray-800;
+$modal-content-bg: $gray-800;
+$modal-content-border-color: $gray-700;
+$modal-header-border-color: $gray-700;
+$progress-bg: $gray-700;
+$list-group-bg: $gray-800;
+$list-group-border-color: $gray-700;
+$list-group-hover-bg: $gray-700;
+$breadcrumb-bg: $gray-700;
+$close-color: $white;
+$close-text-shadow: none;
+$pre-color: inherit;
+$card-bg: $gray-800;
+$link-hover-color: lighten($link-color, 15%);
+$list-group-disabled-color: $gray-700;
+$list-group-action-color: $gray-600;
+$pagination-color: $white;
+$pagination-bg: lighten($primary, 10%);
+$pagination-disabled-bg: darken($primary, 10%);
+$pagination-active-bg: $primary;
+$pagination-active-color: $white;
+$list-group-active-color: $white;
+$dropdown-link-active-color: $white;
