--- a/assets/css/main-light.scss
+++ b/assets/css/main-light.scss
@@ -2,15 +2,14 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-body[data-theme="dark"] {
-    @import "variables_dark";
+body[data-theme="light"] {
+    @import "variables";
     @import "bootstrap/bootstrap";
     @import "syntax-highlighting";
     @import "bootstrap-4-jekyll/bootstrap-4-jekyll";
-    @import "bootswatch_dark";
-    @import "custom_variables_dark";
+    @import "custom_variables";
     @import "custom";
-    @import "custom_dark";
+    @import "custom_light";
     
     & {
         color: $body-color !important;
