--- a/_includes/inventory-itemlist-table.html
+++ b/_includes/inventory-itemlist-table.html
@@ -11,7 +11,7 @@
 
         <th scope="col" data-priority="3" data-class-name="toxicity">{{ site.data.strings.table.inventory.col_toxicity }}</th>
 
-        <th scope="col" data-priority="2" data-class-name="expirable">{{ site.data.strings.table.inventory.col_expirable }}</th>
+        <th scope="col" data-priority="2" data-class-name="expiable">{{ site.data.strings.table.inventory.col_expiable }}</th>
       </tr>
     </thead>
     <tbody>
