--- a/_includes/itemlist-table.html
+++ b/_includes/itemlist-table.html
@@ -20,7 +20,7 @@
 
         <th scope="col" data-priority="1" data-class-name="toxicity">{{ site.data.strings.table.itemlist.col_toxicity }}</th>
 
-        <th scope="col" data-priority="2" data-class-name="expirable">{{ site.data.strings.table.itemlist.col_expirable }}</th>
+        <th scope="col" data-priority="2" data-class-name="expiable">{{ site.data.strings.table.itemlist.col_expiable }}</th>
       </tr>
     </thead>
     <tbody>
