--- a/_includes/itemlist-table-content.html
+++ b/_includes/itemlist-table-content.html
@@ -66,7 +66,7 @@
 
   {% include itemlist-bonus-cell.html value=item.fertilizer_bonus.toxicity invertcolor=1 %}
 
-  {% if item.expirable %}
+  {% if item.expiable %}
   <td class="table-warning">
     In days <i class="fas fa-skull"></i>
   </td>
