--- a/_sass/_custom_variables.scss
+++ b/_sass/_custom_variables.scss
@@ -11,9 +11,8 @@ $heartiness-color: #db963c !default;
 $aesthetic-color: #db3c3c !default;
 $aroma-color: #9b3cdb !default;
 
-$placements-1-1-color: red !default;
-$placements-2-1-color: turquoise !default;
-$placements-4-4-color: springgreen !default;
-$placements-1-3-color: orange !default;
-$placements-2-2-color: skyblue !default;
-$placements-circle-color: violet !default;
+$placements-1-1-color: darken($spring-color, 15%) !default;
+$placements-2-1-color: darken($summer-color, 15%) !default;
+$placements-1-3-color: darken($autumn-color, 15%) !default;
+$placements-2-2-color: darken($winter-color, 15%) !default;
+$placements-circle-color: darken($spring-color, 15%) !default;
