--- a/_includes/guide-aesthetic.html
+++ b/_includes/guide-aesthetic.html
@@ -80,7 +80,7 @@
                     {{ site.data.strings.guide.offshots_3.lock_ducks }}
                 </li>
                 <li class="list-group-item">
-                    {{ site.data.strings.guide.offshots_3.short_dehydrate }}
+                    {{ site.data.strings.guide.offshots_3.dehydrate }}
                 </li>
             </ul>
         </div>
