--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {%- include head.html -%}
 
-  <body>
+  <body data-theme='dark'>
     {%- include header.html -%}
     <script type='text/javascript' >  
       const site = {
