--- a/_includes/guide-yield.html
+++ b/_includes/guide-yield.html
@@ -112,7 +112,7 @@
                     {{ site.data.strings.guide.ripen.weather.pray_for_dry }}
                 </li>
                 <li class="list-group-item">
-                    {{ site.data.strings.guide.water.drain }}
+                    {{ site.data.strings.guide.water.drain_open_gate }}
                 </li>
                 <li class="list-group-item">
                     {{ site.data.strings.guide.ripen.harvest.average }}
