--- a/_includes/itemlist-table.html
+++ b/_includes/itemlist-table.html
@@ -1,5 +1,5 @@
-<div class="table-item-list">
-  <table class="table table-bordered dt-responsive" id="{{include.id}}">
+<div class="table-item-list table-responsive">
+  <table class="table table-bordered table-striped dt-responsive" id="{{include.id}}">
     <thead>
       <tr>
         <th scope="col" data-priority="0" data-class-name="add-to-inventory">{{ site.data.strings.table.itemlist.col_add_to_inventory }}</th>
