add cooking list

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,12 @@
           <a class="nav-link" href="#sectionItemList">{{ site.data.strings.item_list.title }}</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#sectionItemListIngredients">{{ site.data.strings.item_list.ingredients.title }}</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#sectionItemListFood">{{ site.data.strings.item_list.food.title }}</a>
+        </li>
+        <li class="nav-item">
           <div class="checkbox mx-3 mt-1">
             <input type="checkbox" data-toggle="toggle" id="chbDarkTheme" 
               data-on='<i class="fas fa-moon"></i>' 
