--- a/_includes/material-itemlist-table.html
+++ b/_includes/material-itemlist-table.html
@@ -1,5 +1,8 @@
 <div class="table-item-list table-responsive">
   <table class="table table-bordered table-striped dt-responsive" id="{{include.id}}">
+    {% if include.caption %}
+      <caption>{{ include.caption }}</caption>
+    {% endif %}
     <thead>
       <tr>
         <th scope="col" data-priority="0" data-class-name="add-to-inventory">{{ site.data.strings.table.itemlist.col_add_to_inventory }}</th>
