add find in and enemy drops

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
           assets_url: '{{ "assets/" | absolute_url }}',
           strings: {{ site.data.strings | jsonify }},
           items: {{ site.data.items | jsonify }}
-        }
+        },
+        version: '{{ site.version }}'
       };
     </script>
 
