--- a/_sass/_custom_dark.scss
+++ b/_sass/_custom_dark.scss
@@ -19,3 +19,12 @@
 .table-warning {
     color: $black;
 }
+
+.list-group-item-primary,
+.list-group-item-secondary,
+.list-group-item-success,
+.list-group-item-danger,
+.list-group-item-warning,
+.list-group-item-info {
+    color: $black;
+}
