add item details

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -250,7 +250,7 @@ ul.pagination {
 }
 
 .text-neutral {
-    color: $body-color;
+    color: $body-color !important;
 }
 
 .text-placements-1-1-color {
